--- a/index.html
+++ b/index.html
@@ -318,6 +318,27 @@
   <main>
     <!-- HERO -->
     <section id="home">
+      <section id="home">
+
+  <!-- FULL-WIDTH HERO IMAGE -->
+  <div style="
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto 2rem;
+    border-radius: 22px;
+    overflow: hidden;
+    box-shadow: 0 18px 30px rgba(0,0,0,0.06);
+  ">
+    <img src="fire.png"
+         alt="Campfire storytelling illustration"
+         style="
+           width: 100%;
+           display: block;
+         ">
+  </div>
+
+  <div class="hero-card">
+
       <div class="hero-card">
         <div class="hero-pill">
           <span></span>
@@ -457,3 +478,4 @@
 
 </body>
 </html>
+
