Update file website file

--- a/index.html
+++ b/index.html
@@ -158,16 +158,26 @@
       border-top: 1px dashed rgba(0,0,0,0.12);
     }
 
-    /* HERO SECTION with gradient background */
+    /* HERO SECTION with bold, painting-inspired gradient */
     .hero-section {
-      background:
-        radial-gradient(circle at top left, rgba(227,183,75,0.32), transparent 60%),
-        radial-gradient(circle at top right, rgba(76,42,114,0.38), transparent 60%),
-        radial-gradient(circle at bottom center, rgba(175,162,196,0.4), transparent 65%),
-        var(--bg);
+      position: relative;
       border-radius: 32px;
-      padding: 2.2rem 1.6rem 2.6rem;
-      box-shadow: 0 22px 40px rgba(0,0,0,0.06);
+      padding: 2.6rem 1.9rem 2.8rem;
+      overflow: hidden;
+      background:
+        radial-gradient(circle at 0% 0%, rgba(49, 46, 129, 0.85), transparent 60%),
+        radial-gradient(circle at 100% 0%, rgba(234, 179, 8, 0.8), transparent 62%),
+        radial-gradient(circle at 50% 115%, rgba(147, 197, 253, 0.8), transparent 60%),
+        linear-gradient(140deg, #020617 0%, #111827 22%, #312e81 55%, #f59e0b 92%);
+      box-shadow: 0 28px 60px rgba(15, 23, 42, 0.65);
+      color: #FDF7EE;
+    }
+
+    .hero-section h1,
+    .hero-section .tagline,
+    .hero-section .hero-story,
+    .hero-section .note {
+      color: #FDF7EE;
     }
 
     /* Hero artwork (Fairy Tale painting) */
@@ -192,8 +202,8 @@
       inset: 0;
       background: linear-gradient(
         180deg,
-        rgba(44,24,73,0.25),
-        rgba(44,24,73,0.82)
+        rgba(15, 23, 42, 0.25),
+        rgba(15, 23, 42, 0.9)
       );
       color: #F8F4E8;
       opacity: 0;
@@ -212,31 +222,24 @@
     /* Caption under artwork */
     .hero-art-caption {
       font-size: 0.8rem;
-      color: rgba(0,0,0,0.65);
+      color: rgba(248, 244, 232, 0.84);
       margin: 0 0 1.8rem;
       font-style: italic;
     }
 
+    /* De-card the hero text block */
     .hero-card {
-      background: rgba(252,249,240,0.96);
-      border-radius: 18px;
-      padding: 1.5rem 1.35rem 1.6rem;
-      border: 1px solid rgba(76,42,114,0.12);
-      box-shadow: 0 14px 28px rgba(0,0,0,0.03);
+      background: transparent;
+      border-radius: 0;
+      padding: 1.6rem 0 0;
+      border: none;
+      box-shadow: none;
       position: relative;
-      overflow: hidden;
+      overflow: visible;
     }
 
     .hero-card::before {
-      content: "";
-      position: absolute;
-      top: -40px;
-      right: -40px;
-      width: 130px;
-      height: 130px;
-      border-radius: 50%;
-      background: radial-gradient(circle, rgba(227,183,75,0.4), transparent 60%);
-      opacity: 0.6;
+      display: none;
     }
 
     .hero-pill {
@@ -251,6 +254,12 @@
       background: rgba(76,42,114,0.06);
       color: var(--accent);
       margin-bottom: 0.9rem;
+    }
+
+    /* Hero pill styling when used in the gradient hero */
+    .hero-section .hero-pill {
+      color: #FDF7EE;
+      background: rgba(15, 23, 42, 0.35);
     }
 
     .hero-pill span {
@@ -271,16 +280,33 @@
       border-radius: 0.3em;
     }
 
+    /* Softer, glowing highlight in the hero */
+    .hero-section .highlight {
+      background: linear-gradient(
+        120deg,
+        rgba(250, 250, 249, 0.24),
+        rgba(254, 240, 199, 0.7)
+      );
+    }
+
     .hero-story {
       font-size: 0.9rem;
       margin-bottom: 0.75rem;
       color: rgba(0,0,0,0.78);
     }
 
+    .hero-section .hero-story {
+      color: rgba(253, 247, 238, 0.9);
+    }
+
     .note {
       font-size: 0.82rem;
       color: rgba(0,0,0,0.6);
       margin-top: 0.3rem;
+    }
+
+    .hero-section .note {
+      color: rgba(253, 247, 238, 0.8);
     }
 
     footer {
@@ -299,9 +325,10 @@
       margin-top: 0.5rem;
     }
 
+    /* Remove card-like rail from the side sections */
     .section-wrap {
-      border-left: 3px solid rgba(76,42,114,0.12);
-      padding-left: 1.15rem;
+      border-left: none;
+      padding-left: 0;
     }
 
     .placeholder-page {
@@ -386,13 +413,13 @@
         <div class="hero-art-hover">
           <div>
             <strong>Fairy Tale (Fairy Tale of Kings), 1909 — M.K. Čiurlionis</strong><br>
-         This painting was created to honor Lithuania’s fairytale heritage at a time when the nation’s identity was under threat from Russian aggression. Fairytales are at the heart of Lithuanian culture, so the two figures exchanging a glowing mystical world is a symbolization of sharing stories and imagination, an act of cultural resistance.
+            This painting was created to honor Lithuania’s fairytale heritage at a time when the nation’s identity was under threat from Russian aggression. Fairytales are at the heart of Lithuanian culture, so the two figures exchanging a glowing mystical world is a symbolization of sharing stories and imagination, an act of cultural resistance.
           </div>
         </div>
       </div>
 
       <p class="hero-art-caption">
-        <em>Fairy Tale (Fairy Tale of Kings)</em>, 1909 — Čiurlionis. 
+        <em>Fairy Tale (Fairy Tale of Kings)</em>, 1909 — Čiurlionis.
       </p>
 
       <div class="hero-card">
@@ -511,5 +538,3 @@
 
 </body>
 </html>
-
-
