--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1.2rem 2rem;
+      padding: 1.2rem 1.75rem;
       border: none;
       background: transparent;
       backdrop-filter: none;
@@ -61,17 +61,15 @@
       align-items: center;
       gap: 0.4rem;
       cursor: pointer;
-      color: var(--accent);
     }
 
     .brand img {
-      height: 100px;
+      height: 90px;
       width: auto;
       display: block;
       position: relative;
       z-index: 20;
-      /* tweak or remove filter depending on your logo asset */
-      filter: none;
+      filter: none; /* keep your source logo as-is */
     }
 
     .brand span {
@@ -79,6 +77,7 @@
       letter-spacing: 0.18em;
       text-transform: uppercase;
       font-size: 0.78rem;
+      color: var(--accent);
     }
 
     nav a {
@@ -86,6 +85,7 @@
       font-size: 0.9rem;
       text-transform: lowercase;
       position: relative;
+      color: var(--accent);
     }
 
     nav a::after {
@@ -162,7 +162,7 @@
       border-top: 1px dashed rgba(0,0,0,0.12);
     }
 
-    /* HERO: watercolor gradient, no card */
+    /* HERO: watercolor gradient, no card, no box behind image */
     .hero-section {
       position: relative;
       margin: 0 -1.75rem 3.1rem;
@@ -174,24 +174,26 @@
         radial-gradient(circle at 100% 0%, rgba(227, 183, 75, 0.5), transparent 58%),
         radial-gradient(circle at 50% 120%, rgba(165, 132, 190, 0.45), transparent 60%),
         linear-gradient(180deg, #f8f0e5 0%, #e4d4c2 45%, #d5c3b3 100%);
-      background-blend-mode: screen, normal, soft-light, normal;
+      background-blend-mode: screen, multiply, soft-light, normal;
     }
 
-    /* Hero artwork (Fairy Tale painting) */
+    /* Hero artwork (Fairy Tale painting) — open, no frame */
     .hero-art-wrap {
       width: 100%;
       margin: 0 0 1rem;
-      border-radius: 24px;
-      overflow: hidden;
       position: relative;
-      box-shadow: 0 18px 40px rgba(10, 10, 30, 0.35);
+      border-radius: 0 !important;
+      overflow: visible !important;
+      box-shadow: none !important;
     }
 
     .hero-art-image {
       width: 100%;
       display: block;
       object-fit: cover;
-      max-height: 400px;
+      max-height: 420px;
+      border-radius: 0 !important;
+      box-shadow: none !important;
     }
 
     /* Hover overlay for context */
@@ -225,7 +227,7 @@
       font-style: italic;
     }
 
-    /* Hero copy directly on gradient (no card) */
+    /* Hero copy directly on gradient */
     .hero-copy {
       max-width: 700px;
       margin: 0 auto;
@@ -295,7 +297,7 @@
       margin-top: 0.5rem;
     }
 
-    /* Simpler, more editorial sections (no side card rail) */
+    /* Simpler, editorial sections */
     .section-wrap {
       border-left: none;
       padding-left: 0;
@@ -370,6 +372,8 @@
   <header>
     <div class="brand" onclick="showHome()">
       <img src="naya-logo.PNG" alt="Niya logo">
+      <!-- optional wordmark if you want it -->
+      <!-- <span>NIYA</span> -->
     </div>
     <nav>
       <a href="#" onclick="showHome()">home</a>
