--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
   <header>
     <div class="brand" onclick="showHome()">
-      <img src="naya-logo.PNG" alt="Niya logo">
+      <img src="niya-logo.PNG" alt="Niya logo">
       <!-- <span>NIYA</span> optional wordmark -->
     </div>
     <nav>
@@ -513,3 +513,4 @@
 
 </body>
 </html>
+
