--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
     }
 
     body {
-      margin: 0;
-      /* Single watercolor-style gradient for the whole page */
-      background:
-        radial-gradient(circle at 0% 0%, rgba(76, 42, 114, 0.40), transparent 55%),
-        radial-gradient(circle at 100% 0%, rgba(227, 183, 75, 0.45), transparent 60%),
-        radial-gradient(circle at 50% 130%, rgba(165, 132, 190, 0.40), transparent 60%),
-        linear-gradient(180deg, #f8f0e5 0%, #e4d4c2 45%, #d5c3b3 100%);
-      background-blend-mode: screen, multiply, soft-light, normal;
-      color: var(--text);
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
-                   "Segoe UI", sans-serif;
-      line-height: 1.6;
+       margin: 0;
+  background:
+    radial-gradient(circle at 60% 20%, rgba(163, 132, 196, 0.18), transparent 55%),
+    radial-gradient(circle at 10% 80%, rgba(227, 183, 75, 0.18), transparent 60%),
+    radial-gradient(circle at 90% 90%, rgba(130, 90, 160, 0.12), transparent 65%),
+    linear-gradient(180deg, #ffffff 0%, #f8f4e8 35%, #f6efe2 100%);
+  background-blend-mode: soft-light, normal, normal, normal;
+  color: var(--text);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", "Segoe UI", sans-serif;
+  line-height: 1.6;
     }
 
     a {
@@ -513,4 +511,5 @@
 
 </body>
 </html>
+
 
