--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
       z-index: 20;
     }
 
+      .about-photo {
+  width: 220px;
+  height: auto;
+  border-radius: 16px;
+  display: block;
+  margin: 0 auto 1.8rem;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+}
+
     .brand {
       display: inline-flex;
       align-items: center;
@@ -496,7 +505,17 @@
   <div id="aboutPage" class="placeholder-page">
     <div class="placeholder-tag">about · long-form</div>
     <h1>About Niya</h1>
-    <p>This is a placeholder for a deeper About page. The main homepage holds the core narrative.</p>
+      <img src="about.jpeg" alt="Janya portrait" class="about-photo">
+
+  <p>I’m Janya — a poet, data expert, and writer. Storytelling sits at the center of my work; it’s the thread that connects the two poles of my practice: poetry and data. Poetry moves the inner world, touching people on a visceral, emotional level. Data moves the outer world, shaping systems, decisions, and collective understanding. Together, they teach me how meaning travels — from what is lived to what is measured.</p>
+
+  <p>I hold a Bachelor's degree in Computer Science and International Relations from Tufts University, with a focus on technology, governance, and global systems. My background includes managing environmental and operational real-estate data for CBRE Investment Management’s $200B AUM portfolio, where I built and scaled large data systems used for emissions modeling, regulatory reporting, and portfolio-wide analysis.</p>
+
+  <p>Now, as Head of Data and Engineering at Nuvert, an AI education company, I lead the development of pipelines, models, and internal tooling that support fast decision-making and system-wide alignment across a growing startup.</p>
+
+  <p>I also write for Letterbrace, a technical literature company, and help founders and teams craft narratives here at Niya.</p>
+
+  <p>You can explore my creative portfolio here: <a href="https://janya.netlify.app" target="_blank">janya.netlify.app</a></p>
   </div>
 
   <!-- CONTACT PAGE -->
@@ -517,6 +536,7 @@
 
 </body>
 </html>
+
 
 
 
