--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     .hero-section {
       position: relative;
       margin: 0 0 3.1rem;
-      padding: 5.5rem 0 3.3rem;
+      padding: 5.0rem 0 3.3rem;
       background: transparent; /* key: no extra rectangle */
     }
 
@@ -211,6 +211,7 @@
       max-height: 420px;
       border-radius: 0 !important;
       box-shadow: none !important;
+      object-position: center top;
     }
 
     /* Hover overlay for context */
@@ -552,6 +553,7 @@
 
 </body>
 </html>
+
 
 
 
