--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       width: 100%;
       display: block;
       object-fit: cover;
-      object-position: center top; /* show more of the bottom of the painting */
+      object-position: center bottom; /* show more of the bottom of the painting */
       max-height: 420px;
     }
 
@@ -549,3 +549,4 @@
 
 </body>
 </html>
+
