--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     }
 
     .brand img {
-      height: 90px;
+      height: 110px;
       width: auto;
       display: block;
       position: relative;
@@ -202,7 +202,7 @@
       width: 100%;
       display: block;
       object-fit: cover;
-      object-position: center bottom; /* show more of the bottom of the painting */
+      object-position: center 75%; /* show more of the bottom of the painting */
       max-height: 420px;
     }
 
@@ -549,4 +549,5 @@
 
 </body>
 </html>
+
 
