--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
         url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='320' height='320'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.7' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='320' height='320' filter='url(%23n)' opacity='.32'/%3E%3C/svg%3E");
       background-size:320px 320px;
     }
-
-    /* subtle aging */
     body::after{
       content:"";
       position:fixed;
@@ -55,7 +53,7 @@
         radial-gradient(circle at 85% 80%, rgba(0,0,0,.18), transparent 60%);
     }
 
-    a{ color:var(--ink); }
+    a{ color:var(--ink); text-decoration:none; }
     a:hover{ text-decoration:underline; }
 
     header{
@@ -77,18 +75,16 @@
       gap:1rem;
     }
 
-    /* Placeholder logo (text) — opens full About page */
+    /* Placeholder logo (text) — links to separate about page */
     .logo{
       font-family:Fraunces, serif;
       text-transform:uppercase;
       letter-spacing:.18em;
       font-size:.75rem;
-      cursor:pointer;
       user-select:none;
       display:inline-flex;
       align-items:center;
       gap:.55rem;
-      text-decoration:none;
       color:rgba(27,25,22,.92);
     }
     .logo::before{
@@ -111,7 +107,6 @@
     }
     nav a{
       color:rgba(27,25,22,.78);
-      text-decoration:none;
       position:relative;
     }
     nav a::after{
@@ -126,7 +121,7 @@
     }
     nav a:hover::after{ width:100%; }
 
-    main, .page{
+    main{
       max-width:var(--max);
       margin:0 auto;
       padding:6.2rem 1.35rem 4rem;
@@ -134,18 +129,12 @@
       z-index:1;
     }
 
-    /* “Page” system */
-    .page{ display:none; }
-    .page.is-active{ display:block; }
-    .home{ display:none; }
-    .home.is-active{ display:block; }
-
     /* HERO */
     .poster-grid{
       display:grid;
       grid-template-columns: 1.1fr 1.6fr;
       gap:2rem;
-      margin-bottom:2.6rem;
+      margin-bottom:2.8rem;
     }
 
     .poster-words{
@@ -211,6 +200,7 @@
     .manifesto{
       max-width:74ch;
       font-size:1.15rem;
+      margin-top:1.2rem;
     }
 
     .manifesto h2{
@@ -221,48 +211,12 @@
       margin:2.2rem 0 .8rem;
     }
 
-    .manifesto p{
-      margin:1rem 0;
-    }
+    .manifesto p{ margin:1rem 0; }
 
-    .about-mini{
-      margin-top:2.8rem;
-      padding-top:1.4rem;
+    .section-divider{
+      margin:2.6rem 0;
+      border:none;
       border-top:1px solid rgba(27,25,22,.12);
-      max-width:74ch;
-    }
-    .about-mini h3{
-      font-family:Fraunces, serif;
-      text-transform:uppercase;
-      letter-spacing:.12em;
-      font-size:.82rem;
-      margin:0 0 .55rem;
-      color:rgba(27,25,22,.78);
-    }
-    .about-mini p{
-      margin:.6rem 0;
-      color:rgba(27,25,22,.84);
-      font-size:1.05rem;
-    }
-
-    .about-page h1{
-      font-family:Fraunces, serif;
-      text-transform:uppercase;
-      letter-spacing:.10em;
-      font-weight:500;
-      font-size:1.55rem;
-      margin:0 0 1.2rem;
-    }
-
-    .about-photo{
-      width:240px;
-      height:auto;
-      border-radius:18px;
-      display:block;
-      margin:0 auto 1.8rem;
-      box-shadow:0 14px 34px rgba(0,0,0,0.12);
-      border:1px solid rgba(27,25,22,.10);
-      background: rgba(255,255,255,.08);
     }
 
     footer{
@@ -273,8 +227,6 @@
       letter-spacing:.22em;
       text-transform:uppercase;
       color:var(--muted);
-      position:relative;
-      z-index:1;
     }
 
     @media(max-width:900px){
@@ -288,17 +240,6 @@
       if (!overlay) return;
       overlay.classList.toggle('is-visible');
     }
-
-    function showView(viewId){
-      document.querySelectorAll('.home, .page').forEach(el => el.classList.remove('is-active'));
-      const target = document.getElementById(viewId);
-      if (target) target.classList.add('is-active');
-      window.scrollTo(0, 0);
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      showView('homeView');
-    });
   </script>
 </head>
 
@@ -306,17 +247,20 @@
 
 <header>
   <div class="header-inner">
-    <a class="logo" href="#" onclick="showView('aboutView'); return false;">Golden Parable</a>
+    <!-- separate About page -->
+    <a class="logo" href="about.html">Golden Parable</a>
+
     <nav>
-      <a href="#" onclick="showView('homeView'); return false;">home</a>
-      <a href="#" onclick="showView('narrativeView'); return false;">our narrative</a>
-      <a href="#" onclick="showView('contactView'); return false;">contact</a>
+      <a href="#home">home</a>
+      <a href="#narrative">our narrative</a>
+      <a href="#contact">contact</a>
     </nav>
   </div>
 </header>
 
-<!-- HOME VIEW -->
-<main id="homeView" class="home is-active">
+<main>
+
+  <!-- HOME -->
   <section id="home">
     <div class="poster-grid">
       <div class="poster-words">
@@ -346,27 +290,12 @@
         </div>
       </div>
     </div>
-
-    <!-- Tiny About at bottom -->
-    <div class="about-mini">
-      <h3>About</h3>
-      <p>
-        Golden Parable is a narrative studio run by Janya — a writer and poet working at the intersection of systems and language.
-        If you want the fuller background and practice, you can read the longer about.
-      </p>
-      <p>
-        <a href="#" onclick="showView('aboutView'); return false;">Read the full about →</a>
-      </p>
-    </div>
   </section>
 
-  <footer>Golden Parable</footer>
-</main>
+  <hr class="section-divider">
 
-<!-- OUR NARRATIVE VIEW (UPDATED COPY) -->
-<section id="narrativeView" class="page">
-  <div class="manifesto">
-
+  <!-- OUR NARRATIVE (ALL TEXT BELOW) -->
+  <section id="narrative" class="manifesto">
     <h2>What is Golden Parable trying to do?</h2>
     <p>
       Golden Parable exists to help people define, craft, improve, and tailor their narratives. We work with founders and companies to make sure the principles behind what they are building — and why — are well communicated.
@@ -434,46 +363,19 @@
     <p>
       I am Janya — a writer and poet. I have worked in startups and technical teams, building the systems that power an organization and the stories that help people understand them. Golden Parable comes from that intersection.
     </p>
+  </section>
 
-  </div>
+  <hr class="section-divider">
 
-  <footer>Golden Parable</footer>
-</section>
-
-<!-- CONTACT VIEW -->
-<section id="contactView" class="page">
-  <div class="manifesto">
+  <!-- CONTACT -->
+  <section id="contact" class="manifesto">
     <h2>Contact</h2>
     <p>To collaborate: <a href="mailto:hello@goldenparable.com">hello@goldenparable.com</a></p>
-  </div>
+  </section>
 
   <footer>Golden Parable</footer>
-</section>
 
-<!-- FULL ABOUT PAGE VIEW -->
-<section id="aboutView" class="page about-page">
-  <div class="manifesto">
-    <h1>About Golden Parable</h1>
-
-    <img src="about.jpeg" alt="Janya portrait" class="about-photo">
-
-    <p>I’m Janya — a poet, data expert, and writer. Storytelling sits at the center of my work; it’s the thread that connects the two poles of my practice: poetry and data. Poetry moves the inner world, touching people on a visceral, emotional level. Data moves the outer world, shaping systems, decisions, and collective understanding. Together, they teach me how meaning travels — from what is lived to what is measured.</p>
-
-    <p>I hold a Bachelor's degree in Computer Science and International Relations from Tufts University, with a focus on technology, governance, and global systems. My background includes managing environmental and operational real-estate data for CBRE Investment Management’s $200B AUM portfolio, where I built and scaled large data systems used for emissions modeling, regulatory reporting, and portfolio-wide analysis.</p>
-
-    <p>I am the Head of Data and Engineering and Chief Storyteller at NuVert, an AI education company, building both the systems that power the organization and the stories that help people understand them.</p>
-
-    <p>I also write for Letterbrace, a technical literature company, and help founders and teams craft narratives through Golden Parable.</p>
-
-    <p>You can explore my creative portfolio here: <a href="https://janya.netlify.app" target="_blank" rel="noopener">janya.netlify.app</a></p>
-
-    <p style="margin-top:1.8rem;">
-      <a href="#" onclick="showView('homeView'); return false;">← back to home</a>
-    </p>
-  </div>
-
-  <footer>Golden Parable</footer>
-</section>
+</main>
 
 </body>
 </html>
