--- a/index.html
+++ b/index.html
@@ -251,10 +251,11 @@
     <a class="logo" href="about.html">Golden Parable</a>
 
     <nav>
-      <a href="#home">home</a>
-      <a href="#narrative">our narrative</a>
-      <a href="#contact">contact</a>
-    </nav>
+      <a href="#home">home</a><nav>
+  <a href="#narrative">our narrative</a>
+  <a href="about.html">about</a>
+  <a href="#contact">contact</a>
+</nav>
   </div>
 </header>
 
@@ -379,3 +380,4 @@
 
 </body>
 </html>
+
